Adding tests for CartService, EventService, UserService